<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="36dp"
    android:paddingTop="64dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/label1"
        style="@style/Text.32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/welcom_msg1"
        app:layout_constraintBottom_toTopOf="@+id/label2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label2"
        style="@style/Text.24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_msg2"
        app:layout_constraintBottom_toTopOf="@+id/label3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label1" />

    <TextView
        android:id="@+id/label3"
        style="@style/Text.24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_msg3"
        app:layout_constraintBottom_toTopOf="@+id/barcode_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label2" />

    <EditText
        android:id="@+id/name_input"
        style="@style/Text.24"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:hint="@string/welcome_name"
        android:paddingStart="16dp"
        android:paddingTop="4dp"
        android:paddingEnd="4dp"
        android:paddingBottom="4dp"
        android:singleLine="true"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toStartOf="@+id/next_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label3" />

    <ImageView
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/colorAccent"
        android:src="@drawable/ic_next"
        app:layout_constraintBottom_toBottomOf="@+id/name_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/name_input" />

    <TextView
        android:id="@+id/settings_label"
        style="@style/Text.12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/welcome_connection_settings"
        app:layout_constraintBottom_toTopOf="@+id/productBaseUrlInput"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/productBaseUrlInput"
        style="@style/Text.12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@color/colorLightGrey"
        android:padding="4dp"
        app:layout_constraintBottom_toTopOf="@+id/couponBaseUrlInput"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/couponBaseUrlInput"
        style="@style/Text.12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightGrey"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="98dp"
        android:layout_height="58dp"
        android:src="@drawable/ic_logo"
        android:scaleX="-1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>