<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="36dp"
        android:paddingTop="64dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/name"
            style="@style/Text.32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_hello"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/message1"
            style="@style/Text.24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <TextView
            android:id="@+id/message2"
            style="@style/Text.16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/main_message1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/message1" />

        <EditText
            android:id="@+id/barcode_input"
            style="@style/Text.24"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:hint="@string/main_barcode"
            android:paddingStart="16dp"
            android:paddingTop="4dp"
            android:paddingEnd="4dp"
            android:paddingBottom="4dp"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toStartOf="@id/next_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/message2" />

        <ImageView
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@color/colorAccent"
            android:src="@drawable/ic_next"
            app:layout_constraintBottom_toBottomOf="@+id/barcode_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/barcode_input" />

        <TextView
            android:id="@+id/message3"
            style="@style/Text.16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/main_message2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barcode_input" />

        <com.journeyapps.barcodescanner.BarcodeView
            android:id="@+id/scanner"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/message3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- coupons -->
    <ImageView
        android:id="@+id/coupons_button"
        android:layout_width="56dp"
        android:layout_height="64dp"
        android:layout_gravity="end"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shape_rect_accent"
        android:scaleType="center"
        android:src="@drawable/ic_reward" />

    <!-- progress bar -->
    <FrameLayout
        android:id="@+id/progress_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66000000"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone">

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/ctr_progress_bar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />

    </FrameLayout>

</FrameLayout>